<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"

    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_balloon"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_desctiption_of_balloon"
        android:layout_marginTop="-10dp"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/bt_dialog_info_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bt_reload_dialog"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <ProgressBar
        android:id="@+id/pb_dialog_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_result_scan_qr_balloon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp" />

</LinearLayout>