<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.collector.Collector">




    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_frame_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2680FF"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/text_collector_menu_item_1" />

        <Button
            android:id="@+id/bt_frame_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#63A2FB"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/text_collector_menu_item_2" />

        <ImageButton
            android:id="@+id/bt_collector_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/ic_baseline_exit_to_app_24"
            android:text="@string/exit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/container_collector"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>