<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_constraint_layout"
    android:visibility="visible"
    android:alpha="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogIn">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoblack"
        android:text="@string/welcome_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotolight"
        android:textSize="17sp"
        android:text="@string/enter_text"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/et_name_layout"
        app:layout_constraintEnd_toEndOf="@+id/tv_welcome"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/et_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/login"

        app:placeholderTextColor="@color/my_blue"
        app:counterOverflowTextColor="@color/my_blue"
        app:counterTextColor="@color/my_blue"

        app:boxStrokeColor="@color/my_blue"
        app:hintTextColor="@color/my_blue"
        app:startIconDrawable="@drawable/ic_person"
        app:helperTextTextColor="#FF0000"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:fontFamily="@font/robotoregular"
 />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/et_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/my_blue"
        app:hintTextColor="@color/my_blue"
        app:helperTextTextColor="#FF0000"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:fontFamily="@font/robotoregular"
            android:textColorHint="#757575"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_logIn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding = "8dp"
        android:text="@string/enter"
        android:textSize="18sp"
        android:fontFamily="@font/robotomedium"
        android:backgroundTint="@color/my_blue"
        android:textColor="@color/white"
        app:useMaterialThemeColors="false"
        app:layout_constraintEnd_toEndOf="@id/et_password_layout"
        app:layout_constraintStart_toStartOf="@+id/et_password_layout"
        app:layout_constraintTop_toBottomOf="@+id/remember_check_Box" />

    <ProgressBar
        android:id="@+id/pb_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_background"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_logIn" />


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/remember_check_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/remember"
        android:theme="@style/colored_checkbox"
        app:layout_constraintStart_toStartOf="@+id/et_password_layout"
        app:layout_constraintTop_toBottomOf="@+id/et_password_layout" />

    <Button
        android:id="@+id/bt_setting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_baseline_settings_24"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>